--- a/index.html
+++ b/index.html
@@ -1,7 +1,98 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About Me - Fluffy</title>
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            background-color: #f0f8ff;
+            color: #333;
+            margin: 0;
+            padding: 0;
+            text-align: center;
+        }
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            background: white;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+            padding: 20px;
+        }
+        header, footer {
+            background-color: #4a90e2;
+            color: white;
+            padding: 20px;
+            border-radius: 8px;
+        }
+        header {
+            border-bottom: 3px solid #1c2e6f;
+        }
+        footer {
+            position: fixed;
+            width: 100%;
+            bottom: 0;
+            border-top: 3px solid #1c2e6f;
+        }
+        h1 {
+            color: #4a90e2;
+        }
+        p {
+            line-height: 1.6;
+        }
+        a {
+            color: #4a90e2;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+        .social-links img {
+            width: 30px;
+            margin: 0 10px;
+        }
+    </style>
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+    <header>
+        About Me
+    </header>
+
+    <div class="container">
+        <section id="intro">
+            <h1>Hello, I'm Fluffy!</h1>
+            <p>
+                Welcome im just a derg flying above the clouds enjoying life 
+            </p>
+        </section>
+
+        <section id="current-projects">
+            <h2>Current Projects</h2>
+            <p>
+                Currently, I'm working on expanding my Dragon Paws community and creating engaging content. When I'm not managing my server or coding, I enjoy scrolling on youtube.
+            </p>
+        </section>
+
+        <section id="connect">
+            <h2>Connect With Me</h2>
+            <p>
+                You can connect with me and the community on my discord <a href"https://discord.com/invite/swnSq4xCHq" target="_blank">Discord server</a>. I'm also active on my <a href="https://sites.google.com/view/dragon-paws/home" target="_blank">Dragon Paws website</a>.
+            </p>
+            <p>
+                Feel free to reach out to me through <a href="mailto:dragonpaws.contact@gmail.com" target="_blank">email</a>. Please don't spam me :(
+            </p>
+        </section>
+    </div>
+
+    <footer>
+        &copy; [Year] Fluffy. All rights reserved.
+        <div class="social-links">
+            <a href="[Your Twitter Link]" target="_blank"><img src="twitter-icon.png" alt="Twitter"></a>
+            <a href="[Your GitHub Link]" target="_blank"><img src="github-icon.png" alt="GitHub"></a>
+            <a href="[Your LinkedIn Link]" target="_blank"><img src="linkedin-icon.png" alt="LinkedIn"></a>
+        </div>
+    </footer>
 </body>
 </html>
