--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <style>
         body {
             font-family: 'Arial', sans-serif;
-            background-color: #f0f8ff;
-            color: #333;
+            background-color: #50c878; /* Emerald background */
+            color: #dc143c; /* Crimson text */
             margin: 0;
             padding: 0;
             text-align: center;
@@ -20,30 +20,31 @@
             border-radius: 8px;
             box-shadow: 0 4px 8px rgba(0,0,0,0.1);
             padding: 20px;
+            color: #333; /* Container text color */
         }
         header, footer {
-            background-color: #4a90e2;
+            background-color: #dc143c; /* Crimson background for header and footer */
             color: white;
             padding: 20px;
             border-radius: 8px;
         }
         header {
-            border-bottom: 3px solid #1c2e6f;
+            border-bottom: 3px solid #850a29; /* Darker crimson */
         }
         footer {
             position: fixed;
             width: 100%;
             bottom: 0;
-            border-top: 3px solid #1c2e6f;
+            border-top: 3px solid #850a29;
         }
-        h1 {
-            color: #4a90e2;
+        h1, h2 {
+            color: #dc143c; /* Crimson headings */
         }
         p {
             line-height: 1.6;
         }
         a {
-            color: #4a90e2;
+            color: #850a29; /* Darker crimson for links */
             text-decoration: none;
         }
         a:hover {
@@ -64,21 +65,21 @@
         <section id="intro">
             <h1>Hello, I'm Fluffy!</h1>
             <p>
-                Welcome im just a derg flying above the clouds enjoying life 
+                Welcome im just a derg flying above the clouds loving life. i currently enjoy music and drawing but im bad at drawing ): im also a shy derg  never reslly gotten able to speak in a vc or anything like that without someone mentioning me to speak or making me speak so i have bad soclal skills and my grammer is bad too as evident by this page 
             </p>
         </section>
 
         <section id="current-projects">
             <h2>Current Projects</h2>
             <p>
-                Currently, I'm working on expanding my Dragon Paws community and creating engaging content. When I'm not managing my server or coding, I enjoy scrolling on youtube.
+                Currently, I'm working on expanding my Dragon Paws community and creating engaging content. When I'm not managing my server or coding, I enjoy scrollinvg youtube.
             </p>
         </section>
 
         <section id="connect">
             <h2>Connect With Me</h2>
             <p>
-                You can connect with me and the community on my discord <a href"https://discord.com/invite/swnSq4xCHq" target="_blank">Discord server</a>. I'm also active on my <a href="https://sites.google.com/view/dragon-paws/home" target="_blank">Dragon Paws website</a>.
+                You can connect with me and the community on my Discord <a href="https://discord.com/invite/swnSq4xCHq" target="_blank">Discord server</a>. I'm also active on my <a href="https://sites.google.com/view/dragon-paws/home" target="_blank">Dragon Paws website</a>.
             </p>
             <p>
                 Feel free to reach out to me through <a href="mailto:dragonpaws.contact@gmail.com" target="_blank">email</a>. Please don't spam me :(
