--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me - Fluffy the Dragon</title>
     <style>
-        /* Overall body with deeper space and epic glow */
+        /* Overall body with space and glow */
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, sans-serif;
-            background: linear-gradient(120deg, #0a0a23, #000000), url('https://i.imgur.com/Qn1W0n9.jpg');
+            background: linear-gradient(120deg, #0a0a23, #000000), url('https://i.imgur.com/Qn1W0n9.jpg') no-repeat center center fixed;
             background-size: cover;
-            background-attachment: fixed;
             color: #f5f5f5;
             margin: 0;
             padding: 0;
@@ -21,174 +20,123 @@
             min-height: 100vh;
             overflow-x: hidden;
             position: relative;
-            overflow: hidden;
         }
 
-        /* Create starry sky with deeper, more epic dynamics */
+        /* Basic star effect for ambiance */
         .star {
             position: absolute;
-            background: rgba(255, 255, 255, 0.9);
+            background: rgba(255, 255, 255, 0.8);
             border-radius: 50%;
-            width: 3px;
-            height: 3px;
-            animation: starTwinkle 3s infinite alternate ease-in-out, starMove 25s linear infinite;
+            width: 4px;
+            height: 4px;
+            animation: starTwinkle 2s infinite alternate;
         }
 
         @keyframes starTwinkle {
-            0% { opacity: 0.5; transform: scale(1); }
-            50% { opacity: 1; transform: scale(1.5); }
-            100% { opacity: 0.8; transform: scale(0.7); }
+            0% { opacity: 0.5; }
+            100% { opacity: 1; }
         }
 
-        @keyframes starMove {
-            0% { transform: translate(0, 0); }
-            100% { transform: translate(calc(100vw - 100px), calc(100vh - 100px)); }
-        }
-
-        .star:nth-child(even) {
-            animation-duration: 40s;
-        }
-
-        /* Glowing, radiant container with dynamic pulses */
+        /* Glowing container with blur */
         .container {
-            max-width: 900px;
-            background: rgba(20, 20, 35, 0.95);
-            border-radius: 15px;
-            padding: 40px;
-            box-shadow: 0 0 80px rgba(0, 255, 255, 0.9), 0 0 120px rgba(255, 0, 255, 0.9);
-            backdrop-filter: blur(25px);
-            animation: containerGlow 8s infinite ease-in-out;
+            max-width: 1200px;
+            background: rgba(20, 20, 35, 0.9);
+            border-radius: 10px;
+            padding: 30px;
+            box-shadow: 0 0 40px rgba(0, 255, 255, 0.7), 0 0 60px rgba(255, 0, 255, 0.7);
+            backdrop-filter: blur(15px);
             position: relative;
             z-index: 1;
         }
 
-        @keyframes containerGlow {
-            0% { box-shadow: 0 0 60px rgba(255, 0, 255, 0.9), 0 0 80px rgba(0, 255, 255, 0.9); }
-            50% { box-shadow: 0 0 90px rgba(0, 255, 255, 1), 0 0 120px rgba(255, 0, 255, 1); }
-            100% { box-shadow: 0 0 120px rgba(255, 0, 255, 0.9), 0 0 160px rgba(0, 255, 255, 1); }
-        }
-
-        /* Headings with neon glow, pulse, and dramatic animation */
+        /* Headings with minimal glow */
         h1, h2 {
             color: #fff;
             text-transform: uppercase;
-            letter-spacing: 3px;
-            margin-bottom: 25px;
-            text-shadow: 0 0 40px rgba(0, 255, 255, 1), 0 0 50px rgba(255, 0, 255, 1);
-            transition: text-shadow 0.4s ease;
-            animation: headingPulse 6s infinite alternate ease-in-out;
+            letter-spacing: 2px;
+            margin-bottom: 15px;
+            text-shadow: 0 0 20px rgba(0, 255, 255, 0.7);
         }
 
-        @keyframes headingPulse {
-            from { text-shadow: 0 0 20px rgba(255, 255, 255, 0.8), 0 0 30px rgba(0, 255, 255, 0.8); }
-            to { text-shadow: 0 0 60px rgba(255, 0, 255, 1), 0 0 100px rgba(0, 255, 255, 1); }
-        }
-
-        /* Paragraphs with radiant, glowing text */
+        /* Paragraphs for readability */
         p {
-            font-size: 1.3em;
-            line-height: 1.8;
-            text-shadow: 0 0 20px rgba(255, 255, 255, 0.3);
+            font-size: 1.2em;
+            line-height: 1.6;
         }
 
-        /* Super dynamic and glowing link styles */
+        /* Link styles */
         a {
             color: #00ffff;
             text-decoration: none;
             position: relative;
             font-weight: bold;
-            text-shadow: 0 0 15px rgba(0, 255, 255, 0.9);
-            transition: all 0.4s ease;
+            transition: color 0.3s ease, text-shadow 0.3s ease;
         }
 
         a:hover {
             color: #ff00ff;
-            text-shadow: 0 0 50px rgba(255, 0, 255, 1), 0 0 80px rgba(0, 255, 255, 1);
+            text-shadow: 0 0 20px rgba(255, 0, 255, 1);
         }
 
-        /* Particle systems with smooth, randomized animations */
-        .particle {
-            position: absolute;
-            width: 10px;
-            height: 10px;
-            border-radius: 50%;
-            background-color: rgba(255, 0, 255, 0.7);
-            box-shadow: 0 0 20px rgba(0, 255, 255, 0.9), 0 0 30px rgba(255, 0, 255, 0.9);
-            animation: particleGlow 8s infinite ease-in-out alternate;
+        /* Placeholder text styles */
+        .editable {
+            border: 1px dashed #ff00ff;
+            padding: 10px;
+            margin: 10px 0;
+            background-color: rgba(0, 0, 0, 0.6);
+            color: #ff00ff;
         }
 
-        @keyframes particleGlow {
-            from { transform: translateY(0); background-color: rgba(0, 255, 255, 0.8); }
-            to { transform: translateY(-100px); background-color: rgba(255, 0, 255, 0.8); }
-        }
-
-        /* Header/footer with intense glow and transition effects */
+        /* Header/footer styles */
         header, footer {
-            background: rgba(30, 30, 30, 0.95);
+            background: rgba(30, 30, 30, 0.9);
             color: white;
-            padding: 20px;
-            border-radius: 15px;
+            padding: 15px;
+            border-radius: 10px;
             text-align: center;
-            font-size: 2em;
-            letter-spacing: 3px;
+            font-size: 1.5em;
+            letter-spacing: 2px;
             text-transform: uppercase;
-            box-shadow: 0 0 80px rgba(0, 255, 255, 1), 0 0 100px rgba(255, 0, 255, 1);
-            animation: footerHeaderGlow 5s infinite alternate;
         }
 
-        @keyframes footerHeaderGlow {
-            0% { box-shadow: 0 0 50px rgba(0, 255, 255, 0.9), 0 0 70px rgba(255, 0, 255, 0.9); }
-            100% { box-shadow: 0 0 100px rgba(255, 0, 255, 1), 0 0 130px rgba(0, 255, 255, 1); }
-        }
-
-        /* Responsive for mobile */
+        /* Responsive design for mobile */
         @media (max-width: 768px) {
-            body { padding: 15px; }
-            .container { padding: 25px; }
+            .container { padding: 20px; }
         }
     </style>
 </head>
 
 <body>
 
-    <!-- Intensified star particle effects -->
-    <div class="star" style="top: 5%; left: 20%;"></div>
-    <div class="star" style="top: 15%; left: 50%;"></div>
-    <div class="star" style="top: 30%; left: 80%;"></div>
-    <div class="star" style="top: 45%; left: 10%;"></div>
-    <div class="star" style="top: 70%; left: 40%;"></div>
+    <!-- Basic star particle effects -->
+    <div class="star" style="top: 10%; left: 20%;"></div>
+    <div class="star" style="top: 25%; left: 60%;"></div>
+    <div class="star" style="top: 50%; left: 80%;"></div>
 
     <header>About Me</header>
 
     <div class="container">
-        <!-- Particles for ambient floating effect -->
-        <div class="particle" style="top: 15%; left: 30%;"></div>
-        <div class="particle" style="top: 45%; right: 15%;"></div>
-        <div class="particle" style="top: 65%; left: 50%;"></div>
-        <div class="particle" style="bottom: 10%; left: 10%;"></div>
+        <h1>hello im fluffy_the_dragon (: </h1>
 
-        <section id="intro">
-            <h1>Hey! I'm Fluffy the Dragon!</h1>
-            <p>
-                I’m a derg flying above the clouds enjoying life. lifes good but sometimes it gets sad i have been there before. but dont stop because its sad push because its happening
-            </p>
+        <section class="editable">
+            <h2>About Me</h2>
+            <p>just a fluffy derg flying above the clouds enjoying life as it comes. its like thy say dont give up because its hard. push because its happening
+i am also a shy derg when it comes to it and need a nudge as im shy when in chats and etc also im grammerly challanged as is evident from this page (srry).</p>
         </section>
 
-        <section id="contact">
-            <h2>Connect With Me</h2>
-            <p>
-                Feel free to join my <a href="https://discord.com/invite/swnSq4xCHq" target="_blank">Discord server</a> or visit the <a href="https://sites.google.com/view/dragon-paws/home" target="_blank">Dragon Paws website</a> to learn more about what we do.
-            </p>
-            <p>
-                You can also reach me via email: <a href="mailto:destroyercomqq6@gmail.com" target="_blank">here</a>. Please dont spam my email as i dont want to deal with a pipebomb in my inbox.
-            </p>
+        <section class="editable">
+            <h2>My Interests</h2>
+            <p>i enjoy coding in python and also bat files  i use chatgpt because i cant code myself  i also like hacking on minecraft but not for bad reseaons  if you dont want me to hack just ask  i also enjoy other things irl such as swimming and music .</p>
+        </section>
+
+        <section class="editable">
+            <h2>Find Me On</h2>
+            <p>Check out my <a href="https://discord.com/invite/swnSq4xCHq" target="_blank">Discord server</a> called dragon paws !</p>
+            <p>Feel free to <a href="mailto:destroyercomqq6@gmail.com">email me</a> for any questions also please dont pipebomb my inbox i dont want to deal with that ):.</p>
         </section>
     </div>
 
-    <footer>
-        &copy; 2024 Fluffy the Dragon. (:
-    </footer>
-
+    <footer>Thanks for visiting!</footer>
 </body>
 
 </html>
