--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me - Fluffy the Dragon</title>
     <style>
-        /* Overall body with space and glow */
+        /* Overall body with space and gradient background */
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, sans-serif;
-            background: linear-gradient(120deg, #0a0a23, #000000), url('https://i.imgur.com/Qn1W0n9.jpg') no-repeat center center fixed;
-            background-size: cover;
+            background: linear-gradient(120deg, #884ac3, #ac5b95);
             color: #f5f5f5;
             margin: 0;
             padding: 0;
@@ -39,12 +38,12 @@
 
         /* Glowing container with blur */
         .container {
-            max-width: 1200px;
-            background: rgba(20, 20, 35, 0.9);
+            max-width: 800px; /* Made the container smaller */
+            background: rgba(20, 20, 35, 0.9); /* Optional: keep a slight color for contrast */
             border-radius: 10px;
             padding: 30px;
             box-shadow: 0 0 40px rgba(0, 255, 255, 0.7), 0 0 60px rgba(255, 0, 255, 0.7);
-            backdrop-filter: blur(15px);
+            backdrop-filter: blur(15px); /* Blur effect */
             position: relative;
             z-index: 1;
         }
@@ -116,23 +115,22 @@
     <header>About Me</header>
 
     <div class="container">
-        <h1>hello im fluffy_the_dragon (: </h1>
+        <h1>Hello, I'm Fluffy the Dragon!</h1>
 
         <section class="editable">
             <h2>About Me</h2>
-            <p>just a fluffy derg flying above the clouds enjoying life as it comes. its like thy say dont give up because its hard. push because its happening
-i am also a shy derg when it comes to it and need a nudge as im shy when in chats and etc also im grammerly challanged as is evident from this page (srry).</p>
+            <p>Just a fluffy dragon flying above the clouds, enjoying life as it comes. It's like they say, don't give up because it's hard. Push through because it's happening. I am also a shy dragon when it comes to chatting and need a nudge, as I'm shy in conversations. Also, I'm grammatically challenged, as is evident from this page (sorry).</p>
         </section>
 
         <section class="editable">
             <h2>My Interests</h2>
-            <p>i enjoy coding in python and also bat files  i use chatgpt because i cant code myself  i also like hacking on minecraft but not for bad reseaons  if you dont want me to hack just ask  i also enjoy other things irl such as swimming and music .</p>
+            <p>I enjoy coding in Python and also batch files. I use ChatGPT because I can't code myself. I also like cheating in Minecraft, but not for bad reasons. If you don't want me to cheating, just ask! I also enjoy other things in real life, such as swimming and music.</p>
         </section>
 
         <section class="editable">
             <h2>Find Me On</h2>
-            <p>Check out my <a href="https://discord.com/invite/swnSq4xCHq" target="_blank">Discord server</a> called dragon paws !</p>
-            <p>Feel free to <a href="mailto:destroyercomqq6@gmail.com">email me</a> for any questions also please dont pipebomb my inbox i dont want to deal with that ):.</p>
+            <p>Check out my <a href="https://discord.com/invite/swnSq4xCHq" target="_blank">Discord server</a> called Dragon Paws!</p>
+            <p>Feel free to <a href="mailto:destroyercomqq6@gmail.com">email me</a> for any questions. Also, please don't spam my inbox; I don't want to deal with that.</p>
         </section>
     </div>
 
@@ -140,3 +138,4 @@ i am also a shy derg when it comes to it and need a nudge as im shy when in chat
 </body>
 
 </html>
+
